--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,21 @@ sub { bottom: -.25em; }
 .cf { *zoom: 1; }
 
 /*for all*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --clr-white: #fff;
+  --clr-grey1: #c0c0c0;
+  --clr-grey2: #666;
+}
+
 body {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -100,55 +115,72 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 86%; 
+  width: 90%;
   margin: 0 auto;
 }
-/*=================================
-  Header styling starts here
-=================================*/
-
-
-
-
-
-
-/*=================================
-  Header styling ends here
-=================================*/  
 
 /*=================================
   main styling starts here
 =================================*/
 
+.container {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, var(--clr-white), var(--clr-grey1));
+}
 
+.wrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.cards {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+}
 
+.card {
+  height: 100%;
+  flex-basis: 5%;
+  border-radius: 40px;
+  position: relative;
+  box-shadow: 0 0 5px var(--clr-grey2);
+  cursor: pointer;
+  overflow: hidden;
+  transition: all .5s;
+}
 
+.card-name {
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: block;
+  position: absolute;
+  bottom: 3%;
+  left: 2%;
+  background-color: rgba(0,0,0,0.7);
+  color: var(--clr-white);
+  font-size: 28px;
+  opacity: 0;
+  text-transform: capitalize;
+  transition: opacity .1s;
+}
 
+/* extra classes added for js program */
 
+.opacity {
+  opacity: 1;
+}
+
+.flex-grow {
+  flex: 1 0;
+}
 
 /*=================================
   main styling ends here
 =================================*/
-
-/*=================================
-  footer styling starts here
-=================================*/ 
-
-
-
-
-
-
-
- /*=================================
-  footer styling ends here
-=================================*/ 
-
-/*media query starts*/
-/*media query for 995px starts here*/
-@media only screen and (max-width: 995px) {
-
-
-
-}  
